# bsim2

./: Cargo.toml  README.md  Trunk.toml  gates.blend  gates.blend1  index.html
.github/workflows/: release.yaml
assets/: gates.glb
src/: blocks.rs  colored_mesh2d.wgsl  lib.rs  loading.rs  main.rs  web.rs
src/blocks/: update.rs
