[package]
name = "bsim2"
version = "0.1.0"
publish = false
authors = ["Benjamin Martin <benma2321@gmail.com>"]
edition = "2021"
exclude = ["dist", "build", "assets", "credits"]

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

# This is used by trunk as it doesn't support custom profiles: https://github.com/trunk-rs/trunk/issues/605
# xbuild also uses this profile for building android AABs because I couldn't find a configuration for it
[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true

# Profile for distribution
[profile.dist]
inherits = "release"
opt-level = 3
lto = true
codegen-units = 1
strip = true

[features]
default = ["dev"]
dev = ["bevy/dynamic_linking", "bevy/file_watcher"]

# All of Bevy's default features exept for the audio related ones (bevy_audio, vorbis), since they clash with bevy_kira_audio
#   and android_shared_stdcxx, since that is covered in `mobile`
[dependencies]
bevy = { version = "0.14", default-features = false, features = [
    "bevy_asset",
    "bevy_gilrs",
    "bevy_scene",
    "bevy_winit",
    "bevy_core_pipeline",
    "bevy_gltf",
    "bevy_render",
    "bevy_sprite",
    "bevy_text",
    "bevy_ui",
    "multi_threaded",
    "png",
    "hdr",
    "x11",
    "wayland",
    "tonemapping_luts",
    "default_font",
    "webgl2",
    "bevy_debug_stepping",
] }
bevy_kira_audio = "0.20"
bevy_asset_loader = "0.21"
bevy_pancam = "0.12.0"
rand = { version = "0.8.3" }

# winit = { version = "*", default-features = false, features = [] }
image = { version = "*", default-features = false }

[target.'cfg(target_family = "wasm")'.dependencies]
web-sys = { version = "0.3.69", features = ["HtmlCanvasElement"] }

[build-dependencies]
embed-resource = "1"
